--- a/index.html
+++ b/index.html
@@ -59,43 +59,43 @@
     
     <section id="Avis">
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="Gemini_Generated_Image_iyncyciyncyciync avec arrière-plan supprimé.png" alt=""></div>
+            <div class="pfp"><img src="Profile1.png" alt=""></div>
             <div class="user">Michael</div>
             <div class="commentaire">~ J'ai adoré la pizza</div>
             <div class="note">4.8</div>
