Ajout de pizza : nombre =14

--- a/index.html
+++ b/index.html
@@ -53,6 +53,55 @@
             <span class="points"></span>
             <span class="prix">13€</span>
         </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="3 Fromages.jpeg" alt=""></span>
+            <span class="nom">Fromages</span>
+            <span class="points"></span>
+            <span class="prix">13€</span>
+        </div>
+        
         
     </section>
     <h2 class="TitreSection"> Avis</h2>
