ajout pizzas + avis clients

--- a/index.html
+++ b/index.html
@@ -25,90 +25,83 @@
             Menu
         </h1>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
+            <span class="image"><img src="images/pizzas/3Fromages.jpeg" alt="3fromages"></span>
             <span class="nom">3 Fromages</span>
             <span class="points"></span>
-            <span class="prix">11€</span>
+            <span class="prix">12,50€</span>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
+            <span class="image"><img src="images/pizzas/7Fromages.jpeg" alt="7fromages"></span>
+            <span class="nom">7 Fromages</span>
             <span class="points"></span>
-            <span class="prix">13€</span>
+            <span class="prix">13,50€</span>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-         <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
+            <span class="image"><img src="images/pizzas/Bergamotte.jpeg" alt="bergamotte"></span>
+            <span class="nom">Bergamotte</span>
             <span class="points"></span>
             <span class="prix">13€</span>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
+            <span class="image"><img src="images/pizzas/Bolognaise.webp" alt="bolognaise"></span>
+            <span class="nom">Bolognaise</span>
             <span class="points"></span>
-            <span class="prix">13€</span>
+            <span class="prix">12,50€</span>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
+            <span class="image"><img src="images/pizzas/Crapsy.jpeg" alt="crapsy"></span>
+            <span class="nom">Crapsy</span>
+            <span class="points"></span>
+            <span class="prix">13,50€</span>
+        </div>
+         <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Canadian.jpeg" alt="canadian"></span>
+            <span class="nom">Canadian</span>
+            <span class="points"></span>
+            <span class="prix">12,50€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Chorizo.jpeg" alt="chorizo"></span>
+            <span class="nom">Chorizo</span>
+            <span class="points"></span>
+            <span class="prix">12€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Poulet4.jpeg" alt="poulet-4"></span>
+            <span class="nom">Poulet-4</span>
+            <span class="points"></span>
+            <span class="prix">12,50€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Flamenkuch.jpeg" alt="flammenkueche"></span>
+            <span class="nom">Flamenkuch</span>
+            <span class="points"></span>
+            <span class="prix">13,50€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Montagnarde.jpeg" alt="montagnarde"></span>
+            <span class="nom">Montagnarde</span>
+            <span class="points"></span>
+            <span class="prix">13,50€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Paysanne.jpeg" alt="paysanne"></span>
+            <span class="nom">Paysanne</span>
+            <span class="points"></span>
+            <span class="prix">11,50€</span>
+        </div>
+        <div class="ElementsPizza">
+            <span class="image"><img src="images/pizzas/Sicilienne.jpeg" alt="Sicilienne"></span>
+            <span class="nom">Sicilienne</span>
             <span class="points"></span>
             <span class="prix">13€</span>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
+            <span class="image"><img src="images/pizzas/vege.jpeg" alt="Végétarienne"></span>
+            <span class="nom">Végétarienne</span>
             <span class="points"></span>
-            <span class="prix">13€</span>
+            <span class="prix">12,50€</span>
         </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        <div class="ElementsPizza">
-            <span class="image"><img src="images/3 Fromages.jpeg" alt=""></span>
-            <span class="nom">Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
-        </div>
-        
         
     </section>
 
@@ -135,27 +128,25 @@
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt=""></div>
             <div class="user">Julien</div>
-            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! </br>
-                            La pâte est faite maison, produits de qualité, pizza bien garnis</br>
-                            Le proprio est super sympa </br> Merci et à bientôt !</div>
+            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! </br> La pâte est faite maison, produits de qualité, pizza bien garnis</br> Le proprio est super sympa </br> Merci et à bientôt !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt=""></div>
-            <div class="user">Michael</div>
-            <div class="commentaire">~ J'ai adoré la pizza</div>
+            <div class="user">Robert</div>
+            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. </br> Le chef est très sympa et accueillant, je ne peux que recommander !</br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt=""></div>
-            <div class="user">Michael</div>
-            <div class="commentaire">~ J'ai adoré la pizza</div>
+            <div class="user">Julia</div>
+            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.</br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.</br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir</br></div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt=""></div>
-            <div class="user">Michael</div>
-            <div class="commentaire">~ J'ai adoré la pizza</div>
+            <div class="user">Camille</div>
+            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.</br>Je recommande sans hésitation.</div>
             <div class="note">4.8</div>
         </span>
     </section>
