--- a/index.html
+++ b/index.html
@@ -108,43 +108,43 @@
     <h2 class="TitreSection"> Avis</h2>    
     <section id="Avis">
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Michael</div>
             <div class="commentaire">Les meilleurs pizzas de ce côté de Toulouse  ! Cela fait des années que je vais chez cet artisan de talent ! Un super rapport qualité prix. Un grand choix de pizza à petit prix</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">René</div>
             <div class="commentaire">Les pizzas sont très bonnes et bien garnies. On est super bien accueilli et le patron est très sympathique ! Je recommande +++</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Patricia</div>
             <div class="commentaire">Franchement top, première commande que je passe chez vous, avec uber eats. Top du top. Très bonne pizza, très bien garnie, prix très raisonnable. Je repasserais commande sans hésiter.</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julien</div>
             <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! </br> La pâte est faite maison, produits de qualité, pizza bien garnis</br> Le proprio est super sympa </br> Merci et à bientôt !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Robert</div>
             <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. </br> Le chef est très sympa et accueillant, je ne peux que recommander !</br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julia</div>
             <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.</br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.</br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir</br></div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt=""></div>
+            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Camille</div>
             <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.</br>Je recommande sans hésitation.</div>
             <div class="note">4.8</div>
@@ -153,7 +153,7 @@
 
         <div id="noteM">
             <h2 style="text-align: center;">note moyenne : </h2>
-            <div id="noteMoyenne"><img src="images/rating.png" alt=""></div>
+            <div id="noteMoyenne"><img src="images/note.png" alt="note"></div>
         </div>
 
     <section id="Horaires" class="TitreSection">
