navbar + rééquilibrage margins

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/pizza.ico">
-    <title>La trattoria</title>
+    <title>Pizzeria La Trattoria</title>
 </head>
 
 <body>
     <header>
+        <div>
+            <h1 id="titre">La Trattoria</h1>
+        </div>
         <nav>
             <a href="#Pizzas" id="Pizzas-link"><strong>Pizzas</strong></a>
             <a href="#Avis" id="Avis-link"><strong>Avis</strong></a>
@@ -159,7 +162,7 @@
 
     <section id="Horaires" class="TitreSection">
         <h2> Horaires </h2>
-        ~ Du Mardi au Dimanche
+        ~ Du Mardi au Dimanche ~
         <div>
             Mardi : de 8h à 16h
         </div>
