réparationsErreur0(amelioration score W3C)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pizzeria La Trattoria">
+    <meta name="author" content="Erhan B & Etienne M">
+    <meta name="keywords" content="Pizza, Pizzas, Pizzeria, Toulouse, Carmes, Maison, artisanal, italien, trattoria">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/pizza.ico">
     <title>Pizzeria La Trattoria</title>
@@ -24,7 +27,7 @@
         <h1>Pizzeria La Trattoria</h1>
     </div>
 
-    <section id ="Pizzas">
+    <div class="section" id ="Pizzas">
         <h1 class="TitreSection">
             Menu
         </h1>
@@ -107,10 +110,10 @@
             <span class="prix">12,50€</span>
         </div>
         
-    </section>
+    </div>
 
     <h2 class="TitreSection"> Avis</h2>    
-    <section id="Avis">
+    <div class="section" id="Avis">
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Michael</div>
@@ -132,35 +135,35 @@
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julien</div>
-            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! </br> La pâte est faite maison, produits de qualité, pizza bien garnis</br> Le proprio est super sympa </br> Merci et à bientôt !</div>
+            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br /> La pâte est faite maison, produits de qualité, pizza bien garnis<br /> Le proprio est super sympa <br /> Merci et à bientôt !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Robert</div>
-            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. </br> Le chef est très sympa et accueillant, je ne peux que recommander !</br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
+            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. <br /> Le chef est très sympa et accueillant, je ne peux que recommander !<br />Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julia</div>
-            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.</br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.</br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir</br></div>
+            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.<br />J’ai prit une 7 fromages avec une portion de frites et c’était un régal.<br />Très simple de se garer au parking à côté. Je recommande avec grand plaisir<br /></div>
             <div class="note">4.8</div>
         </span>
         <span class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Camille</div>
-            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.</br>Je recommande sans hésitation.</div>
+            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.<br />Je recommande sans hésitation.</div>
             <div class="note">4.8</div>
         </span>
-    </section>
+    </div>
 
         <div id="noteM">
             <h2 style="text-align: center;">note moyenne : </h2>
             <div id="noteMoyenne"><img src="images/note.png" alt="note"></div>
         </div>
 
-    <section id="Horaires" class="TitreSection">
+    <div class="section" id="Horaires" class="TitreSection">
         <h2> Horaires </h2>
         ~ Du Mardi au Dimanche ~
         <div>
@@ -182,7 +185,7 @@
             Dimanche : de 18h à 21h15
         </div>
 
-    </section>
+    </div>
 
     <footer>
         <span>Mentions légales</span>
