--- a/index.html
+++ b/index.html
@@ -28,134 +28,134 @@
     </div>
 
     <div class="section" id ="Pizzas">
-        <h1 class="TitreSection">
+        <div class="TitreSection">
             Menu
-        </h1>
+        </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/3Fromages.jpeg" alt="3fromages"></span>
-            <span class="nom">3 Fromages</span>
-            <span class="points"></span>
-            <span class="prix">12,50€</span>
+            <div class="image"><img src="images/pizzas/3Fromages.jpeg" alt="3fromages"></div>
+            <div class="nom">3 Fromages</div>
+            <div class="points"></div>
+            <div class="prix">12,50€</div>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/7Fromages.jpeg" alt="7fromages"></span>
-            <span class="nom">7 Fromages</span>
-            <span class="points"></span>
-            <span class="prix">13,50€</span>
+            <div class="image"><img src="images/pizzas/7Fromages.jpeg" alt="7fromages"></div>
+            <div class="nom">7 Fromages</div>
+            <div class="points"></div>
+            <div class="prix">13,50€</div>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Bergamotte.jpeg" alt="bergamotte"></span>
-            <span class="nom">Bergamotte</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
+            <div class="image"><img src="images/pizzas/Bergamotte.jpeg" alt="bergamotte"></div>
+            <div class="nom">Bergamotte</div>
+            <div class="points"></div>
+            <div class="prix">13€</div>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Bolognaise.webp" alt="bolognaise"></span>
-            <span class="nom">Bolognaise</span>
-            <span class="points"></span>
-            <span class="prix">12,50€</span>
+            <div class="image"><img src="images/pizzas/Bolognaise.webp" alt="bolognaise"></div>
+            <div class="nom">Bolognaise</div>
+            <div class="points"></div>
+            <div class="prix">12,50€</div>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Crapsy.jpeg" alt="crapsy"></span>
-            <span class="nom">Crapsy</span>
-            <span class="points"></span>
-            <span class="prix">13,50€</span>
+            <div class="image"><img src="images/pizzas/Crapsy.jpeg" alt="crapsy"></div>
+            <div class="nom">Crapsy</div>
+            <div class="points"></div>
+            <div class="prix">13,50€</div>
         </div>
          <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Canadian.jpeg" alt="canadian"></span>
-            <span class="nom">Canadian</span>
-            <span class="points"></span>
-            <span class="prix">12,50€</span>
+            <div class="image"><img src="images/pizzas/Canadian.jpeg" alt="canadian"></div>
+            <div class="nom">Canadian</div>
+            <div class="points"></div>
+            <div class="prix">12,50€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Chorizo.jpeg" alt="chorizo"></span>
-            <span class="nom">Chorizo</span>
-            <span class="points"></span>
-            <span class="prix">12€</span>
+            <div class="image"><img src="images/pizzas/Chorizo.jpeg" alt="chorizo"></div>
+            <div class="nom">Chorizo</div>
+            <div class="points"></div>
+            <div class="prix">12€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Poulet4.jpeg" alt="poulet-4"></span>
-            <span class="nom">Poulet-4</span>
-            <span class="points"></span>
-            <span class="prix">12,50€</span>
+            <div class="image"><img src="images/pizzas/Poulet4.jpeg" alt="poulet-4"></div>
+            <div class="nom">Poulet-4</div>
+            <div class="points"></div>
+            <div class="prix">12,50€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Flamenkuch.jpeg" alt="flammenkueche"></span>
-            <span class="nom">Flamenkuch</span>
-            <span class="points"></span>
-            <span class="prix">13,50€</span>
+            <div class="image"><img src="images/pizzas/Flamenkuch.jpeg" alt="flammenkueche"></div>
+            <div class="nom">Flamenkuch</div>
+            <div class="points"></div>
+            <div class="prix">13,50€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Montagnarde.jpeg" alt="montagnarde"></span>
-            <span class="nom">Montagnarde</span>
-            <span class="points"></span>
-            <span class="prix">13,50€</span>
+            <div class="image"><img src="images/pizzas/Montagnarde.jpeg" alt="montagnarde"></div>
+            <div class="nom">Montagnarde</div>
+            <div class="points"></div>
+            <div class="prix">13,50€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Paysanne.jpeg" alt="paysanne"></span>
-            <span class="nom">Paysanne</span>
-            <span class="points"></span>
-            <span class="prix">11,50€</span>
+            <div class="image"><img src="images/pizzas/Paysanne.jpeg" alt="paysanne"></div>
+            <div class="nom">Paysanne</div>
+            <div class="points"></div>
+            <div class="prix">11,50€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/Sicilienne.jpeg" alt="Sicilienne"></span>
-            <span class="nom">Sicilienne</span>
-            <span class="points"></span>
-            <span class="prix">13€</span>
+            <div class="image"><img src="images/pizzas/Sicilienne.jpeg" alt="Sicilienne"></div>
+            <div class="nom">Sicilienne</div>
+            <div class="points"></div>
+            <div class="prix">13€</div>
         </div>
         <div class="ElementsPizza">
-            <span class="image"><img src="images/pizzas/vege.jpeg" alt="Végétarienne"></span>
-            <span class="nom">Végétarienne</span>
-            <span class="points"></span>
-            <span class="prix">12,50€</span>
+            <div class="image"><img src="images/pizzas/vege.jpeg" alt="Végétarienne"></div>
+            <div class="nom">Végétarienne</div>
+            <div class="points"></div>
+            <div class="prix">12,50€</div>
         </div>
         
     </div>
 
     <h2 class="TitreSection"> Avis</h2>    
     <div class="section" id="Avis">
-        <span class="AvisUtilisateurs">
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Michael</div>
             <div class="commentaire">Les meilleurs pizzas de ce côté de Toulouse  ! Cela fait des années que je vais chez cet artisan de talent ! Un super rapport qualité prix. Un grand choix de pizza à petit prix</div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">René</div>
             <div class="commentaire">Les pizzas sont très bonnes et bien garnies. On est super bien accueilli et le patron est très sympathique ! Je recommande +++</div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Patricia</div>
             <div class="commentaire">Franchement top, première commande que je passe chez vous, avec uber eats. Top du top. Très bonne pizza, très bien garnie, prix très raisonnable. Je repasserais commande sans hésiter.</div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julien</div>
-            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br /> La pâte est faite maison, produits de qualité, pizza bien garnis<br /> Le proprio est super sympa <br /> Merci et à bientôt !</div>
+            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br> La pâte est faite maison, produits de qualité, pizza bien garnis<br> Le proprio est super sympa <br> Merci et à bientôt !</div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Robert</div>
-            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. <br /> Le chef est très sympa et accueillant, je ne peux que recommander !<br />Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
+            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. <br> Le chef est très sympa et accueillant, je ne peux que recommander !<br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Julia</div>
-            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.<br />J’ai prit une 7 fromages avec une portion de frites et c’était un régal.<br />Très simple de se garer au parking à côté. Je recommande avec grand plaisir<br /></div>
+            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.<br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.<br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir<br></div>
             <div class="note">4.8</div>
-        </span>
-        <span class="AvisUtilisateurs">
+        </div>
+        <div class="AvisUtilisateurs">
             <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
             <div class="user">Camille</div>
-            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.<br />Je recommande sans hésitation.</div>
+            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.<br>Je recommande sans hésitation.</div>
             <div class="note">4.8</div>
-        </span>
+        </div>
     </div>
 
         <div id="noteM">
@@ -163,7 +163,7 @@
             <div id="noteMoyenne"><img src="images/note.png" alt="note"></div>
         </div>
 
-    <div class="section" id="Horaires" class="TitreSection">
+    <div class="section TitreSection" id="Horaires">
         <h2> Horaires </h2>
         ~ Du Mardi au Dimanche ~
         <div>
@@ -188,7 +188,7 @@
     </div>
 
     <footer>
-        <span>Mentions légales</span>
+        <div>Mentions légales</div>
     </footer>
 
 </body>
