--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#Horaires" id="Horaires-link"><strong>Horaires d'ouverture</strong></a>
         </nav>
     </header>
+    <main>
 
     <div class="TitreSection">
         <h1>Pizzeria La Trattoria</h1>
@@ -186,7 +187,7 @@
         </div>
 
     </div>
-
+    </main>
     <footer>
         <div>Mentions légales</div>
     </footer>
