--- a/index.html
+++ b/index.html
@@ -1,195 +1,207 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pizzeria La Trattoria">
     <meta name="author" content="Erhan B & Etienne M">
     <meta name="keywords" content="Pizza, Pizzas, Pizzeria, Toulouse, Carmes, Maison, artisanal, italien, trattoria">
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/pizza.ico">
+
     <title>Pizzeria La Trattoria</title>
 </head>
 
 <body>
+
     <header>
-        <div>
-            <h1 id="titre">La Trattoria</h1>
+        <div class="TitreSection">
+            La Trattoria
         </div>
         <nav>
-            <a href="#Pizzas" id="Pizzas-link"><strong>Pizzas</strong></a>
-            <a href="#Avis" id="Avis-link"><strong>Avis</strong></a>
-            <a href="#Horaires" id="Horaires-link"><strong>Horaires d'ouverture</strong></a>
+            <a href="tel:0600000000"> <img class="icon" id="telicon" src="images/telicon.png" alt="icône téléphone"><b>Contact</b></a>
+            <a href="#Pizzas"> <img class="icon" id="pizzaicon" src="images/pizzaicon.png" alt="icône Carte"><b>Carte</b></a>
+            <a href="#Avis"> <img class="icon" id="avisicon" src="images/avisicon.png" alt="icône avis"><b>Avis</b></a>
+            <a href="#Horaires"> <img class="icon" id="horairesicon" src="images/horairesicon.png" alt="icône horaires"><b>Horaires</b></a>
         </nav>
     </header>
+
     <main>
-
-    <div class="TitreSection">
-        <h1>Pizzeria La Trattoria</h1>
-    </div>
-
-    <div class="section" id ="Pizzas">
         <div class="TitreSection">
-            Menu
+            <h1>Pizzeria La Trattoria</h1>
         </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/3Fromages.jpeg" alt="3fromages"></div>
-            <div class="nom">3 Fromages</div>
-            <div class="points"></div>
-            <div class="prix">12,50€</div>
-        </div>
-         <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/7Fromages.jpeg" alt="7fromages"></div>
-            <div class="nom">7 Fromages</div>
-            <div class="points"></div>
-            <div class="prix">13,50€</div>
-        </div>
-         <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Bergamotte.jpeg" alt="bergamotte"></div>
-            <div class="nom">Bergamotte</div>
-            <div class="points"></div>
-            <div class="prix">13€</div>
-        </div>
-         <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Bolognaise.webp" alt="bolognaise"></div>
-            <div class="nom">Bolognaise</div>
-            <div class="points"></div>
-            <div class="prix">12,50€</div>
-        </div>
-         <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Crapsy.jpeg" alt="crapsy"></div>
-            <div class="nom">Crapsy</div>
-            <div class="points"></div>
-            <div class="prix">13,50€</div>
-        </div>
-         <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Canadian.jpeg" alt="canadian"></div>
-            <div class="nom">Canadian</div>
-            <div class="points"></div>
-            <div class="prix">12,50€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Chorizo.jpeg" alt="chorizo"></div>
-            <div class="nom">Chorizo</div>
-            <div class="points"></div>
-            <div class="prix">12€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Poulet4.jpeg" alt="poulet-4"></div>
-            <div class="nom">Poulet-4</div>
-            <div class="points"></div>
-            <div class="prix">12,50€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Flamenkuch.jpeg" alt="flammenkueche"></div>
-            <div class="nom">Flamenkuch</div>
-            <div class="points"></div>
-            <div class="prix">13,50€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Montagnarde.jpeg" alt="montagnarde"></div>
-            <div class="nom">Montagnarde</div>
-            <div class="points"></div>
-            <div class="prix">13,50€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Paysanne.jpeg" alt="paysanne"></div>
-            <div class="nom">Paysanne</div>
-            <div class="points"></div>
-            <div class="prix">11,50€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/Sicilienne.jpeg" alt="Sicilienne"></div>
-            <div class="nom">Sicilienne</div>
-            <div class="points"></div>
-            <div class="prix">13€</div>
-        </div>
-        <div class="ElementsPizza">
-            <div class="image"><img src="images/pizzas/vege.jpeg" alt="Végétarienne"></div>
-            <div class="nom">Végétarienne</div>
-            <div class="points"></div>
-            <div class="prix">12,50€</div>
-        </div>
-        
-    </div>
 
-    <h2 class="TitreSection"> Avis</h2>    
-    <div class="section" id="Avis">
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Michael</div>
-            <div class="commentaire">Les meilleurs pizzas de ce côté de Toulouse  ! Cela fait des années que je vais chez cet artisan de talent ! Un super rapport qualité prix. Un grand choix de pizza à petit prix</div>
-            <div class="note">4.8</div>
+        <div class="section" id ="Pizzas">
+            <div class="TitreSection">
+                Menu
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/3Fromages.jpeg" alt="3fromages"></div>
+                <div class="nom">3 Fromages</div>
+                <div class="points"></div>
+                <div class="prix">12,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/7Fromages.jpeg" alt="7fromages"></div>
+                <div class="nom">7 Fromages</div>
+                <div class="points"></div>
+                <div class="prix">13,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Bergamotte.jpeg" alt="bergamotte"></div>
+                <div class="nom">Bergamotte</div>
+                <div class="points"></div>
+                <div class="prix">13€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/bolo.jpeg" alt="bolognaise"></div>
+                <div class="nom">Bolognaise</div>
+                <div class="points"></div>
+                <div class="prix">12,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Crapsy.jpeg" alt="crapsy"></div>
+                <div class="nom">Crapsy</div>
+                <div class="points"></div>
+                <div class="prix">13,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Canadian.jpeg" alt="canadian"></div>
+                <div class="nom">Canadian</div>
+                <div class="points"></div>
+                <div class="prix">12,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Chorizo.jpeg" alt="chorizo"></div>
+                <div class="nom">Chorizo</div>
+                <div class="points"></div>
+                <div class="prix">12€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Poulet4.jpeg" alt="poulet-4"></div>
+                <div class="nom">Poulet-4</div>
+                <div class="points"></div>
+                <div class="prix">12,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Flamenkuch.jpeg" alt="flammenkueche"></div>
+                <div class="nom">Flamenkuch</div>
+                <div class="points"></div>
+                <div class="prix">13,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Montagnarde.jpeg" alt="montagnarde"></div>
+                <div class="nom">Montagnarde</div>
+                <div class="points"></div>
+                <div class="prix">13,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Paysanne.jpeg" alt="paysanne"></div>
+                <div class="nom">Paysanne</div>
+                <div class="points"></div>
+                <div class="prix">11,50€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/Sicilienne.jpeg" alt="Sicilienne"></div>
+                <div class="nom">Sicilienne</div>
+                <div class="points"></div>
+                <div class="prix">13€</div>
+            </div>
+            <div class="ElementsPizza">
+                <div class="image"><img src="images/pizzas/vege.jpeg" alt="Végétarienne"></div>
+                <div class="nom">Végétarienne</div>
+                <div class="points"></div>
+                <div class="prix">12,50€</div>
+            </div>
+            
         </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">René</div>
-            <div class="commentaire">Les pizzas sont très bonnes et bien garnies. On est super bien accueilli et le patron est très sympathique ! Je recommande +++</div>
-            <div class="note">4.8</div>
+
+        <h2 class="TitreSection"> Avis</h2>    
+        <div class="section" id="Avis">
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Michael</div>
+                <div class="commentaire">Les meilleurs pizzas de ce côté de Toulouse  ! Cela fait des années que je vais chez cet artisan de talent ! Un super rapport qualité prix. Un grand choix de pizza à petit prix</div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">René</div>
+                <div class="commentaire">Les pizzas sont très bonnes et bien garnies. On est super bien accueilli et le patron est très sympathique ! Je recommande +++</div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Patricia</div>
+                <div class="commentaire">Franchement top, première commande que je passe chez vous, avec uber eats. Top du top. Très bonne pizza, très bien garnie, prix très raisonnable. Je repasserais commande sans hésiter.</div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Julien</div>
+                <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br> La pâte est faite maison, produits de qualité, pizza bien garnis<br> Le proprio est super sympa <br> Merci et à bientôt !</div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Robert</div>
+                <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. <br> Le chef est très sympa et accueillant, je ne peux que recommander !<br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Julia</div>
+                <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.<br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.<br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir<br></div>
+                <div class="note">4.8</div>
+            </div>
+            <div class="AvisUtilisateurs">
+                <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
+                <div class="user">Camille</div>
+                <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.<br>Je recommande sans hésitation.</div>
+                <div class="note">4.8</div>
+            </div>
         </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Patricia</div>
-            <div class="commentaire">Franchement top, première commande que je passe chez vous, avec uber eats. Top du top. Très bonne pizza, très bien garnie, prix très raisonnable. Je repasserais commande sans hésiter.</div>
-            <div class="note">4.8</div>
-        </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Julien</div>
-            <div class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br> La pâte est faite maison, produits de qualité, pizza bien garnis<br> Le proprio est super sympa <br> Merci et à bientôt !</div>
-            <div class="note">4.8</div>
-        </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Robert</div>
-            <div class="commentaire">Bonnes pizzas, à prix raisonnable, je me régale à chaque fois. <br> Le chef est très sympa et accueillant, je ne peux que recommander !<br>Très grand choix de pizzas et si celle que vous avez en tête ne figure pas sur la carte, le chef pourra vous proposer de la réaliser, du moment qu'il a les ingrédients adéquat, vraiment top !</div>
-            <div class="note">4.8</div>
-        </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Julia</div>
-            <div class="commentaire">Excellente pizza, le patron est vraiment super sympa, accueillant et très serviable.<br>J’ai prit une 7 fromages avec une portion de frites et c’était un régal.<br>Très simple de se garer au parking à côté. Je recommande avec grand plaisir<br></div>
-            <div class="note">4.8</div>
-        </div>
-        <div class="AvisUtilisateurs">
-            <div class="pfp"><img src="images/Profile1.png" alt="pfp"></div>
-            <div class="user">Camille</div>
-            <div class="commentaire">Le patron est très sympa. Les pizzas sont fines et bonnes et prêtes à l'heure.<br>Je recommande sans hésitation.</div>
-            <div class="note">4.8</div>
-        </div>
-    </div>
 
         <div id="noteM">
-            <h2 style="text-align: center;">note moyenne : </h2>
-            <div id="noteMoyenne"><img src="images/note.png" alt="note"></div>
+            <div class="TitreSection">
+                <h2>Note moyenne : </h2>
+            </div>                
+            <div id="noteMoyenne">
+                <img src="images/note.png" alt="note">
+            </div>
         </div>
 
-    <div class="section TitreSection" id="Horaires">
-        <h2> Horaires </h2>
-        ~ Du Mardi au Dimanche ~
-        <div>
-            Mardi : de 8h à 16h
-        </div>
-        <div>
-            Mercredi : de 8h à 16h
-        </div>
-        <div>
-            Jeudi : de 8h à 16h
-        </div>
-        <div>
-            Vendredi : de 8h à 16h
-        </div>
-        <div>
-            Samedi : de 8h à 16h
-        </div>
-        <div>
-            Dimanche : de 18h à 21h15
-        </div>
+        <div class="section" id="Horaires">
+            <div class="TitreSection">
+                <h2> Horaires </h2>
+            </div>
+            ~ Du Mardi au Dimanche ~
+            <div>
+                Mardi : de 8h à 16h
+            </div>
+            <div>
+                Mercredi : de 8h à 16h
+            </div>
+            <div>
+                Jeudi : de 8h à 16h
+            </div>
+            <div>
+                Vendredi : de 8h à 16h
+            </div>
+            <div>
+                Samedi : de 8h à 16h
+            </div>
+            <div>
+                Dimanche : de 18h à 21h15
+            </div>
 
-    </div>
+        </div>
     </main>
+
     <footer>
-        <div>Mentions légales</div>
+        <a href="mentionslegales.html"> Mentions légales </a>        
     </footer>
 
 </body>
