--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/law.ico">
+    <link rel="icon" type="image/x-icon" href="images/icons/law.ico">
     <title>Mentions légales</title>
 </head>
 <body>
