Ajout des pfps, ajout feuille de style mentions légales, Amélioration de l'affichage des horaires, ajout de border au header

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/icons/law.ico">
+    <link rel="stylesheet" type="text/css" href="styleM.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Mentions légales</title>
 </head>
 <body>
-    <a href="index.html">Retour au site</a>
-    <h1>Mentions légales du site</h1>
-    <h2>Éditeur du site : La Trattoria — Pizzeria artisanale à emporter</h2>
-    <ul>
-        <li><b>Adresse :</b> 24 rue des Carmes, 31000 Toulouse</li>
-        <li><b>Téléphone :</b> <a href="tel:06 00 00 00 00"> 06 00 00 00 00</a></li>
-        <li><b>Email :</b> <a href="mailto:contact@latrattoria.fr"> contact@latrattoria.fr </a> </li>
-        <li><b>Statut juridique :</b> Entreprise individuelle</li>
-        <li><b>Numéro SIRET :</b> 999 888 777 00011</li>
-        <li><b>Responsable de la publication :</b> M. Marco Rossi</li>
-    </ul>
-</body>
+    <div id="lienIndex">
+        <a href="index.html">
+            <span id="Fleche" style="font-size: 1.2em;">&larr;</span>
+        </a>
+    </div>
+    <h1 id="TitreMention">Mentions légales du site</h1>
+        <div class="InfoTitre"><b>Éditeur du site :</b></div>
+            <div class="InfoSub">- La Trattoria — Pizzeria artisanale à emporter</div>
+        <div class="InfoTitre"><b>Adresse :</b></div>
+            <div class="InfoSub">- 24 rue des Carmes, 31000 Toulouse</div>
+        <div class="InfoTitre"><b>Statut juridique :</b></div>
+            <div class="InfoSub">- Entreprise individuelle</div>
+        <div class="InfoTitre"><b>Numéro SIRET :</b></div>
+            <div class="InfoSub">- 999 888 777 00011</div>
+        <div class="InfoTitre"><b>Responsable de la publication :</b></div>
+            <div class="InfoSub">- M. Marco Rossi</div>
+        <div class="InfoTitre"><b>Nous contacter :</b></div>
+            <div class="InfoSub">
+                <span><i class="fa-solid fa-phone"></i> Numéro de téléphone :</span>
+                <a href="tel:0600000000">06 00 00 00 00</a>
+            </div>
+            <div class="InfoSub">
+            <span> @ Adresse mail :</span>
+                <a href="mailto:contact@latrattoria.fr">contact@latrattoria.fr</a>
+            </div>
+</body>     
 </html>
