rené en rene (nom fichier)

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <span class="note">4.8</span>
                 </div>
                 <div class="AvisUtilisateurs">
-                    <img class="pfp" src="pfp/RenéR.png" alt="pfp">
+                    <img class="pfp" src="pfp/ReneR.png" alt="pfp">
                     <span class="user">René</span>
                     <span class="commentaire">Les pizzas sont très bonnes et bien garnies. On est super bien accueilli et le patron est très sympathique ! Je recommande +++</span>
                     <span class="note">4.8</span>
