--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                     <span class="note">4.8</span>
                 </div>
                 <div class="AvisUtilisateurs">
-                    <img class="pfp" src="pfp/JulienR.png" alt="pfp">
-                    <span class="user">Julien</span>
+                    <img class="pfp" src="pfp/PaoloR.png" alt="pfp">
+                    <span class="user">Paolo</span>
                     <span class="commentaire">On y va régulièrement depuis plus d’un an avec mon chéri, ce sont les meilleurs pizza de Toulouse et les moins chers ! <br> La pâte est faite maison, produits de qualité, pizza bien garnis<br> Le proprio est super sympa <br> Merci et à bientôt !</span>
                     <span class="note">4.8</span>
                 </div>
