--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -11,7 +11,7 @@
 <body>
     <div id="lienIndex">
         <a href="index.html">
-            <span id="Fleche" style="font-size: 1.2em;">&larr;</span>
+            <span id="Fleche" style="font-size: 1.2em;">&larr; Retour au site</span>
         </a>
     </div>
     <h1 id="TitreMention">Mentions légales du site</h1>
